# borro-agent-solhack

./: .gitignore  Borro_Agent_Architecture.md  MVP_Backlog.md  National_Solana_Hackathon_Brief.md  PROGRESS.md  README.md  Signing_Custody_Models.md  Задачи - National Solana Hackathon by Decentrathon РУС.md
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/dashboard/: agent-status-card.tsx  ai-decision-card.tsx  buffer-card.tsx  execution-history.tsx  policy-form.tsx  position-card.tsx  setup-checklist-card.tsx  setup-wizard.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  (+2 more)
apps/web/src/hooks/: use-count-up.ts
docs/: user-flow-diagram.html
programs/borro-guard/: Anchor.toml  package-lock.json  package.json
programs/borro-guard/programs/borro-guard/: Cargo.toml
programs/borro-guard/programs/borro-guard/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/borro-guard/programs/borro-guard/src/instructions/: deposit_buffer.rs  initialize_policy.rs  mod.rs  pause_guard.rs  record_decision.rs  update_policy.rs  withdraw_buffer.rs
programs/borro-guard/scripts/: setup-devnet.ts
programs/borro-guard/tests/: borro-guard.ts
programs/borro-guard/tests/fixtures/: localnet-wallet.json
scripts/: setup-devnet.ts
workers/monitor/: .env.example  package-lock.json  package.json
workers/monitor/src/: build-snapshot.ts  decide.ts  execute.ts  fetch-position.ts  index.ts  validate.ts
(+25 files in other folders)
